update to quarto

--- a/docs/index.qmd
+++ b/docs/index.qmd
@@ -2,12 +2,17 @@
 title: "Introduction to rasters with `terra`"
 author: "Jason Flower, UC Santa Barbara"
 date: "`r Sys.Date()`"
-output:
-  html_document: 
+toc: true
+number-sections: false
+format: 
+  html:
+    self-contained: true
+    code-tools: true
+    df-print: paged
+    fig-width: 8
     css: style.css
-    toc: TRUE
-    toc_float: TRUE
-    code_folding: show
+    code-summary: "Show the code"
+    code-overflow: wrap
 ---
 
 # Introduction
@@ -31,21 +36,14 @@ We will cover:
 
 *Resources*:
 
-- The official `terra` tutorial page is https://rspatial.org/spatial/index.html  
-- An excellent reference to all the functions in `terra` is https://rspatial.github.io/terra/reference/terra-package.html
-- This website is an good guide to doing GIS work in R using both `terra` and `sf` packages: https://mgimond.github.io/Spatial/index.html 
-
-```{r include=FALSE}
-knitr::opts_chunk$set(
-  collapse = TRUE,
-  comment = "#>"
-)
-```
-
+- The official `terra` [tutorial page](https://rspatial.org/spatial/index.html){target="_blank"}  
+- The [official reference](https://rspatial.github.io/terra/reference/terra-package.html){target="_blank"} to all the functions in `terra`
+- The [Geocomputation with R](https://r.geocompx.org/adv-map){target="_blank"} website is an excellent resource on map making and geospatial data in R in general
+- [This website](https://mgimond.github.io/Spatial/index.html){target="_blank"} is a good guide to doing GIS work in R using both `terra` and `sf` packages 
 
 ## Prerequisites 
 
-You will need the `terra` package installed, which can be done by running `install.packages("terra")`. If you have problems, there are more details about installing it [here](https://rspatial.github.io/terra/index.html). I will also show how to make an interactive map with `terra`, which requires the `leaflet` package to be installed; `install.packages("leaflet")`. 
+You will need the `terra` package installed, which can be done by running `install.packages("terra")`. If you have problems, there are more details about installing it [here](https://rspatial.github.io/terra/index.html){target="_blank"}. I will also show how to make an interactive map with `terra`, which requires the `leaflet` package to be installed; `install.packages("leaflet")`. 
 
 We can now load the `terra` package:
 
@@ -60,7 +58,9 @@ There are basically two types of spatial data: vector and raster
 ## Vector data 
 Can be points, lines or polygons. Useful for representing things like survey locations, rivers, and boundaries. 
 
-```{r class.source='fold-hide'}
+```{r}
+#| code-fold: true
+
 pts <- rbind(c(3.2,4), c(3,4.6), c(3.8,4.4), c(3.5,3.8), c(3.4,3.6), c(3.9,4.5)) |>
   vect()
 
@@ -74,7 +74,10 @@ par(mfrow = c(1,3))
 plot(pts, axes = F, main = "Points")
 plot(lnes, col = "blue", axes = F, main = "Lines")
 plot(lux, "NAME_2", col = terrain.colors(12), las = 1, axes = F, main = "Polygons")
+```
 
+```{r}
+#| echo: false
 par(mfrow = c(1,3))
 ```
 
@@ -83,7 +86,9 @@ Raster data is a grid of rectangles, normally called cells. Each cell has a valu
 
 Here is an example of raster data, where each cell in the raster represents elevation.
 
-```{r class.source='fold-hide'}
+```{r}
+#| code-fold: true
+
 elev <- system.file("ex/elev.tif", package = "terra") |>
   rast() |>
   aggregate(fact = 2)
@@ -122,13 +127,16 @@ The figure below shows what most of the terms above refer to. As you can see, yo
 `raster` users note: rasters are now `SpatRaster` class not `RasterLayer`
 :::
 
-```{r fig.width=6, echo=FALSE}
+```{r}
+#| echo: false
+
 knitr::include_graphics("../figs/terra_raster_properties_figure.png")
 ```
 
 But what does the raster we created actually look like when plotted. Let's see. All we need is `plot()`
 
-```{r, out.width=3}
+```{r}
+#| fig-height: 2
 plot(ras)
 ```
 
@@ -205,7 +213,7 @@ plot(sst, colNA = "black")
 Note that every cell within our raster has to have a value. 
 
 ## Load and plot some vector data
-To put our raster data in context, let's plot the Great Barrier Reef Marine Park boundary (dowloaded from [here](https://geohub-gbrmpa.hub.arcgis.com/datasets/bac38dff14ae4ff9a1c9de5d234e26f8_30/explore)). This is vector data. You might be used to handling vector data with the `sf` package, but `terra` can also be used for vector data manipulation. We can load a vector using `vect()`
+To put our raster data in context, let's plot the Great Barrier Reef Marine Park boundary (downloaded from [here](https://geohub-gbrmpa.hub.arcgis.com/datasets/bac38dff14ae4ff9a1c9de5d234e26f8_30/explore){target="_blank"}). This is vector data. You might be used to handling vector data with the `sf` package, but `terra` can also be used for vector data manipulation. We can load a vector using `vect()`
 
 ::: {.rasterbox}
 `raster` users note: `terra` has its own methods for handling vector data unlike `raster` which used the `sp` package for vector data handling. Vector data in `terra` are `SpatVector` objects; different from `sf` objects.
@@ -238,7 +246,9 @@ First let's have a look at the extent of the marine park boundary. We can get th
 `raster` users note: `ext()` replaces `extent()`
 :::
 
-```{r fig.cap="Cropping means we remove everything outside the extent (blue box) of our polygon. Masking sets all values outside our polygon to NA."}
+```{r}
+#| fig-cap: "Cropping means we remove everything outside the extent (blue box) of our polygon. Masking sets all values outside our polygon to NA."
+
 #get the marine park boundary extent and convert it into a SpatVector so we can plot it
 gbr_boundary_extent <- ext(gbr_boundary) |>
   vect()
@@ -278,7 +288,8 @@ Often we want to `crop` and `mask` one after the other, and you can do this in o
 
 For reference, here is a figure comparing what `crop`, `mask` and `crop(mask = TRUE)` do:
 
-```{r class.source='fold-hide'}
+```{r}
+#| code-fold: true
 par(mfrow = c(2,2))
 
 plot(sst, main = "Original raster")
@@ -294,6 +305,10 @@ lines(gbr_boundary)
 
 plot(crop(sst, gbr_boundary, mask = TRUE), main = "Cropped and masked")
 lines(gbr_boundary)
+```
+
+```{r}
+#| echo: false
 
 par(mfrow = c(1,1))
 ```
@@ -431,24 +446,30 @@ So far, our data have been in the same coordinate reference system (crs), but we
 
 If we want to know where things are in space, we need to use some kind of spatial reference. We can use our own arbitrary system, e.g. a sampling grid like the one shown in the photo below where we could define the location of each square relative to one of the corners. But normally we want to know where something is on Earth.
 
-```{r fig.width=6, echo=FALSE}
+```{r}
+#| echo: false
+
 knitr::include_graphics("../figs/quadrat.jpg")
 ```
 
 There are two types of coordinate systems we can use to represent locations on Earth:
 
-- Geographic coordinate systems (GCS): uses a 3-D surface (e.g. globe) to define locations on the Earth using longitude and latitude. The 3-D surface is normally an ellipsoid which approximates the Earth but cannot be exact since the Earth is not a smooth surface. This approximation of the Earth is called an datum and can be aligned with the true Earth (the geoid) in different ways depending on whether we are trying to get a good approximation at some particular location (local datum), e.g. California, or best approximation across the whole Earth (geocentric datum). The figure below (sourced from [here](https://mgimond.github.io/Spatial/chp09_0.html)) shows examples of these datums.
+- Geographic coordinate systems (GCS): uses a 3-D surface (e.g. globe) to define locations on the Earth using longitude and latitude. The 3-D surface is normally an ellipsoid which approximates the Earth but cannot be exact since the Earth is not a smooth surface. This approximation of the Earth is called an datum and can be aligned with the true Earth (the geoid) in different ways depending on whether we are trying to get a good approximation at some particular location (local datum), e.g. California, or best approximation across the whole Earth (geocentric datum). The figure below (sourced from [here](https://mgimond.github.io/Spatial/chp09_0.html){target="_blank"}) shows examples of these datums.
 
-```{r echo=FALSE}
+```{r}
+#| echo: false
+
 knitr::include_graphics("../figs/datums.png")
-
 ```
 
-A commonly used geocentric datum is World Geodetic Survey for 1984 (WGS84). This is almost synonymous with the commonly used coordinate reference system EPSG 4326, but EPSG 4326 defines the latitude and longitude coordinates used on the WGS84 ellipsoid ([Ref](https://gis.stackexchange.com/questions/3334/difference-between-wgs84-and-epsg4326))
+A commonly used geocentric datum is World Geodetic Survey for 1984 (WGS84). This is almost synonymous with the commonly used coordinate reference system EPSG 4326, but EPSG 4326 defines the latitude and longitude coordinates used on the WGS84 ellipsoid ([Ref](https://gis.stackexchange.com/questions/3334/difference-between-wgs84-and-epsg4326){target="_blank"})
 
-- Projected coordinate system (projection): Unfortunately, we can't carry around globes all the time when we want to look at a map, and doing calculations, such as distance and area, in 3-D is much more difficult than 2-D. So we need a way of getting from our 3-D globe to a piece of paper (or for younger people, a screen). To do this we need to 'project' from a GCS to a projected coordinate system, which is called projection because we can think of this as putting a light in the center of a globe and the light shines through the globe projecting features onto a piece of paper. The figure below (from [QGIS docs](https://docs.qgis.org/3.34/en/docs/gentle_gis_introduction/coordinate_reference_systems.html)) illustrates this, showing the 3 projection families:
+- Projected coordinate system (projection): Unfortunately, we can't carry around globes all the time when we want to look at a map, and doing calculations, such as distance and area, in 3-D is much more difficult than 2-D. So we need a way of getting from our 3-D globe to a piece of paper (or for younger people, a screen). To do this we need to 'project' from a GCS to a projected coordinate system, which is called projection because we can think of this as putting a light in the center of a globe and the light shines through the globe projecting features onto a piece of paper. The figure below (from [QGIS docs](https://docs.qgis.org/3.34/en/docs/gentle_gis_introduction/coordinate_reference_systems.html){target="_blank"}) illustrates this, showing the 3 projection families:
 
-```{r echo=FALSE, fig.cap="a) Cylindrical; b) conical, and; c) planar projecions"}
+```{r}
+#| echo: false
+#| fig-cap: "a) Cylindrical; b) conical, and; c) planar projecions"
+
 knitr::include_graphics("../figs/projections_qgis_docs.png")
 
 ```
@@ -457,16 +478,16 @@ All projections are a compromise because they will always distort the shape, are
 
 We have only covered the basics of coordinate reference systems because it is a big topic to cover. The following resources are useful for understanding in more depth:
 
-- The QGIS software [documentation](https://docs.qgis.org/3.34/en/docs/gentle_gis_introduction/coordinate_reference_systems.html)
-- The Geocomputation with R [book section](https://r.geocompx.org/spatial-class#crs-intro)
-- R for Spatial Data Science book [section](https://r-spatial.org/book/08-Plotting.html)
-- Stackexchange [question](https://gis.stackexchange.com/questions/149749/is-wgs84-a-coordinate-system-or-projection-system) about WGS84
+- The QGIS software [documentation](https://docs.qgis.org/3.34/en/docs/gentle_gis_introduction/coordinate_reference_systems.html){target="_blank"}
+- The Geocomputation with R [book section](https://r.geocompx.org/spatial-class#crs-intro){target="_blank"}
+- R for Spatial Data Science book [section](https://r-spatial.org/book/08-Plotting.html){target="_blank"}
+- Stackexchange [question](https://gis.stackexchange.com/questions/149749/is-wgs84-a-coordinate-system-or-projection-system){target="_blank"} about WGS84
 
 </details>
 
 ## Projecting rasters (continued)
 
-First let's load some geospatial data that is in a different projection from the data we have been using so far. This is vector data for two marine protected areas (habitat protection zones) in the Great Barrief Reef marine park. This is just a small part of the [Great Barrier Reef Marine Park zoning map](https://geohub-gbrmpa.hub.arcgis.com/datasets/GBRMPA::great-barrier-reef-marine-park-zoning-/explore). Surprisingly, habitat protection zones allow all types of fishing except trawling. You can view more details about the zones and the activities that are allowed [here](https://www2.gbrmpa.gov.au/access/zoning/interpreting-zones).
+First let's load some geospatial data that is in a different projection from the data we have been using so far. This is vector data for two marine protected areas (habitat protection zones) in the Great Barrief Reef marine park. This is just a small part of the [Great Barrier Reef Marine Park zoning map](https://geohub-gbrmpa.hub.arcgis.com/datasets/GBRMPA::great-barrier-reef-marine-park-zoning-/explore){target="_blank"}. Surprisingly, habitat protection zones allow all types of fishing except trawling. You can view more details about the zones and the activities that are allowed [here](https://www2.gbrmpa.gov.au/access/zoning/interpreting-zones){target="_blank"}.
 
 ```{r}
 #load the zones data
@@ -497,7 +518,7 @@ That's a lot of info, and not very easy to read. This is the well-known text (wk
 crs(zones, describe = TRUE)
 ```
 
-This gives just key information we often need to make sense of a crs. We can see that this crs is intended for use for Australia, including all states. We also get the EPSG code: `r crs(zones, describe = TRUE)$code`. EPSG stands for European Petroleum Survey Group who developed a database of 'official' crs's, but now people use EPSG to refer to the database itself (see [here](https://epsg.org/history.html) for more on the history of EPSG).
+This gives just key information we often need to make sense of a crs. We can see that this crs is intended for use for Australia, including all states. We also get the EPSG code: `r crs(zones, describe = TRUE)$code`. EPSG stands for European Petroleum Survey Group who developed a database of 'official' crs's, but now people use EPSG to refer to the database itself (see [here](https://epsg.org/history.html){target="_blank"} for more on the history of EPSG).
 
 Let's check the crs of the data we have been using
 
@@ -516,7 +537,7 @@ We want to get our rasters into the same crs. In this case we will project the r
 ```{r}
 sst_cropped_masked_projected <- project(sst_cropped_masked, crs(zones))
 
-#as an alternative, we can use the EPSG that we went to project into like this:
+#as an alternative, we can use the code for the coordinate reference system we want to project into like this:
 #project(sst_cropped_masked, "epsg:3577")
 ```
 
@@ -565,7 +586,9 @@ These changes in the raster are really important to think about when making deci
 
 Let's take a look at some different methods that can be used to estimate cell values when projecting a raster. We will start with a simple 3x3 raster and project it into Molleweide. The red lined grid in the maps is the original raster grid in vector format projected, and there are maps of the original raster projected using 3 common methods to obtain the new cells values: nearest neighbour, bilinear weighted mean, and area weighted average. Each method gives slightly different values.
 
-```{r class.source='fold-hide'}
+```{r}
+#| code-fold: true
+
 proj_moll <- "ESRI:54009"
 
 ras2 <- rast(xmin = 0, xmax = 1, ymin = 0, ymax = 1, res = 1/3) 
@@ -593,13 +616,17 @@ plot(ras2, main = "Original raster", col = pal)
 plot_func(ras_near, polys, "Nearest neighbour")
 plot_func(ras_bilinear, polys, "Bilinear interpolation")
 plot_func(ras_average, polys, "Area weighted mean")
+```
+
+```{r}
+#| echo: false
 
 par(mfrow = c(1,1))
 ```
 
 `terra` defaults to using bilinear interpolation for continuous values. For categorical values it uses the nearest neighbour method because this avoids the resulting raster ending up with values that were not in the original. Other projection methods available are detailed in the help file `?project`.
 
-If you want to know why the projected rasters don't align with the projected vector grid see [this Q&A on Stackoverflow](https://stackoverflow.com/questions/78440026/how-does-the-r-package-terra-decide-on-the-template-raster-properties-when-pro)
+If you want to know why the projected rasters don't align with the projected vector grid see [this Q&A on Stackoverflow](https://stackoverflow.com/questions/78440026/how-does-the-r-package-terra-decide-on-the-template-raster-properties-when-pro){target="_blank"}
 
 </details>
 
@@ -703,7 +730,7 @@ lines(zones_mean_temp_t$ym, zones_mean_temp_t$V2, type = "l", col = "blue")
 
 ## Nice maps
 
-Everyone likes a nice map. So far we have just created fairly basic maps using the `plot` function in `terra`. There are many great plotting packages such as `tmap` and `ggplot` that can be used to make maps, but we are not going to cover those here. The [Geocomputation with R](https://r.geocompx.org/adv-map) website is an excellent resource on map making and geospatial data in R in general. 
+Everyone likes a nice map. So far we have just created fairly basic maps using the `plot` function in `terra`. There are many great plotting packages such as `tmap` and `ggplot` that can be used to make maps, but we are not going to cover those here. The [Geocomputation with R](https://r.geocompx.org/adv-map){target="_blank"} website is an excellent resource on map making and geospatial data in R in general. 
 
 We can make pretty good maps just using `terra` though! Here we will make a nicer map of our sea surface temperature raster data, using a more appropriate colour scheme and adding a scalebar. There are huge number of options for plotting, see the help file `?plot` for details - make sure you choose the help file for `terra`! 
 
@@ -719,12 +746,15 @@ If you have the `leaflet` package installed (you need version > 2.1.1), then you
 plet(sst_cropped_masked, col = hcl.colors(50, palette = "RdYlBu", rev = TRUE), tiles = "Streets")
 ```
 
-<details>
-<summary>Click to see a range of colour palettes</summary>
+### Colour palettes
 
-The swatches below show all the colour scales available via `hcl.colors()`. The code is directly from `?hcl.colors()`. 
+The swatches below show all the colour scales available via `hcl.colors()`. The code is directly from `?hcl.colors()`.
 
-```{r class.source='fold-hide'}
+An excellent option for viewing a wide range of colour palettes is the `cols4all` [package](https://cols4all.github.io/cols4all-R/){target="_blank"}. Once installed you use `cols4all::c4a_gui()` to get a pop-up page that allows you to easily view and analyse many palettes.
+
+```{r}
+#| code-fold: true
+
 ## color swatches for HCL palettes
 hcl.swatch <- function(type = NULL, n = 5, nrow = 11,
   border = if (n < 15) "black" else NA) {
@@ -754,11 +784,12 @@ hcl.swatch <- function(type = NULL, n = 5, nrow = 11,
 }
 ```
 
-```{r fig.width=8, fig.height=6}
+```{r}
+#| fig-height: 6
+
 hcl.swatch("qualitative")
 hcl.swatch("sequential")
 hcl.swatch("diverging")
 hcl.swatch("divergingx")
 ```
 
-</details>
